--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "ws": "^8.13.0"
+    "express": "^4.19.2",
+    "ws": "^8.15.0"
   }
 }
